# MemForge

./: .gitignore  README.md  memforge.yaml  pyproject.toml
docs/: RFC-001-architecture.md
eval/locomo/: run_eval.py
examples/: config-google.yaml  config-ollama.yaml  config-openai.yaml
memforge/: __init__.py  config.py  core.py  models.py  providers.py
memforge/ingestion/: fact_extractor.py  pipeline.py
memforge/retrieval/: engine.py
memforge/storage/: engine.py  schema.sql
